--- a/mysite/myapp/static/css/style.css
+++ b/mysite/myapp/static/css/style.css
@@ -1,5 +1,5 @@
 body, html {
-    background-image: url("../../templates/myapp/img/bj.jpg"); 
+    background-image: url("../../templates/myapp/img/cine.jpg"); 
     -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -8,16 +8,14 @@ body, html {
   background-attachment: fixed;
 }
 
-
-.header {
-
-    background-color: white;
-    
+#navbar {
+    justify-content: end;
 }
 
-#logo {
-    width: 200px; 
-    height: 100px;
+.navbar-brand {
+    font: caption;
+    font-size: 35px !important;
+    font-family: Arial, Helvetica, sans-serif !important;
 }
 
 .card-title {
@@ -29,8 +27,8 @@ body, html {
     margin-top: 15px;
 }
 
-#formulario, #formulario_pelicula, #formulario_user{
-    margin-top: 20px;
+#formulario, #formulario_peliculas, #formulario_user{
+    margin-top: 30px;
     width: 50%;
 }
 
