--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -17,29 +17,23 @@
 </head>
 <body>
     
-    <header class="container">
-        <div class="row">
-            <div class="col-lg-3">
-                <h1>Videoclub</h1>
-            </div>
-            <div class="col-lg-9">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <div class="container">
-                        <a class="navbar-brand" href="#">Videoclub</a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div id="navbar" class="navbar-collapse collapse">
-                            <ul class="navbar-nav mt-2 mt-md-0">
-                                <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#">Peliculas</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
-                            </ul>
-                        </div>
+    <header class="header bg-light">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+                <div id="nav" class="container">
+                    <a class="navbar-brand" href="#">Videoclub</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div id="navbar" class="navbar-collapse collapse justify-content-end">
+                        <ul class="navbar-nav mt-2 mt-md-0">
+                            <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Peliculas</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
+                        </ul>
                     </div>
-                </nav>
-            </div>
-            
+                </div>
+            </nav>
         </div>
     </header>
     <section id="formulario" class ="container">
