--- a/mysite/myapp/templates/myapp/modify_user.html
+++ b/mysite/myapp/templates/myapp/modify_user.html
@@ -11,41 +11,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body>
-    <header class="container">
-        <div class="row">
-            <div class="col-lg-3">
-                <h1>Videoclub</h1>
-            </div>
-            <div class="col-lg-9">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <div class="container">
-                        <a class="navbar-brand" href="#">Videoclub</a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div id="navbarNavDropdown" class="navbar-collapse collapse">
-                            <ul class="navbar-nav mt-2 mt-md-0">
-                                <li class="nav-item"><a class="nav-link" href={% url 'login_admin' %}>Inicio</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#">Peliculas</a></li>
-                                <li class="nav-item"><a class="nav-link" href={% url 'new_film' %}>Añadir peliculas</a></li>
-                                <li class="dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="true">
-                                      Usuarios
-                                    </a>
-                                  
-                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                      <li><a class="dropdown-item" href={% url 'new_user' %}>Añadir</a></li>
-                                      <li><a class="dropdown-item" href={% url 'modify_user' %}>Borrar/Modificar</a></li>
-                                    </ul>
-                                </li>
-                                <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
-                                <li class="nav-item"><a class="nav-link" href={% url 'index' %}>Cerrar sesión</a></li>
-                            </ul>
-                        </div>
+    <header class="header bg-light">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+                <div id="nav" class="container">
+                    <a class="navbar-brand" href="#">Videoclub</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div id="navbar" class="navbar-collapse collapse justify-content-end">
+                        <ul class="navbar-nav mt-2 mt-md-0">
+                            <li class="nav-item"><a class="nav-link" href={% url 'login_admin' %}>Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Peliculas</a></li>
+                            <li class="nav-item"><a class="nav-link" href={% url 'new_film' %}>Añadir peliculas</a></li>
+                            <li class="dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="true">
+                                    Usuarios
+                                </a>
+                                
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                    <li><a class="dropdown-item" href={% url 'new_user' %}>Añadir</a></li>
+                                    <li><a class="dropdown-item" href={% url 'modify_user' %}>Borrar/Modificar</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
+                            <li class="nav-item"><a class="nav-link" href={% url 'index' %}>Cerrar sesión</a></li>
+                        </ul>
                     </div>
-                </nav>
-            </div>
-            
+                </div>
+            </nav>
         </div>
     </header>
     <section id="buscar_usuario" class ="container">
