--- a/mysite/myapp/templates/myapp/new_film.html
+++ b/mysite/myapp/templates/myapp/new_film.html
@@ -49,23 +49,23 @@
                 <form>
                     <div class="form-group">
                       <label for="nombre_pelicula">Nombre</label>
-                      <input type="text" class="form-control" id="nombre_pelicula" name="nombre_pelicula" placeholder="Nombre de la peliucula">
+                      <input type="text" class="form-control" id="nombre_pelicula" name="nombre_pelicula" placeholder="Nombre de la pelicula">
                     </div>
                     <div class="form-group">
                         <label for="url_pelicula">URL de la pelicula</label>
-                        <input type="url" class="form-control" id="url_pelicula" name="url_pelicula" placeholder="URL de la peliucula">
+                        <input type="url" class="form-control" id="url_pelicula" name="url_pelicula" placeholder="URL de la pelicula">
                     </div>
                     <div class="form-group">
                         <label for="descripcion_pelicula">Descripcion</label>
-                        <input type="text" class="form-control" id="descripcion_pelicula" name="descripcion_pelicula" placeholder="Descripcion de la peliucula">
+                        <input type="text" class="form-control" id="descripcion_pelicula" name="descripcion_pelicula" placeholder="Descripcion de la pelicula">
                     </div>
                     <div class="form-group">
                         <label for="ano_pelicula">Año</label>
-                        <input type="number" class="form-control" id="ano_pelicula" name="ano_pelicula" placeholder="Año de la peliucula">
+                        <input type="number" class="form-control" id="ano_pelicula" name="ano_pelicula" placeholder="Año de la pelicula">
                     </div>
                     <div class="form-group">
                         <label for="director_pelicula">Director</label>
-                        <input type="text" class="form-control" id="director_pelicula" name="director_pelicula" placeholder="Director de la peliucula">
+                        <input type="text" class="form-control" id="director_pelicula" name="director_pelicula" placeholder="Director de la pelicula">
                     </div>
                     <div class="form-group">
                         <label for="reparto_pelicula">Reparto de actores</label>
@@ -77,7 +77,7 @@
                     </div>
                     <div class="form-group">
                         <label for="valoracion_pelicula">Valoracion</label>
-                        <input type="number" class="form-control" id="valoracion_pelicula" name="valoracion_pelicula" placeholder="Valoracion de la peliucula" min="1" max="5">
+                        <input type="number" class="form-control" id="valoracion_pelicula" name="valoracion_pelicula" placeholder="Valoracion de la pelicula" min="1" max="5">
                     </div>
                     <div class="form-group">
                         <a href="">
