--- a/mysite/myapp/templates/myapp/login_user.html
+++ b/mysite/myapp/templates/myapp/login_user.html
@@ -50,11 +50,14 @@
                         <div class="col-3">
                             <img src="img/1917.jpg" alt="1917" width="160" height="200" class="mx-auto d-block"> 
                         </div>
-                        <div class="col-9">
+                        <div class="col-8">
                             <h3>Título: 1917</h3>
                             <p>Año lanzamiento: 2019</p>
                             <p>Director: Sam Mendes</p>
                             <p>La película sigue a dos jóvenes soldados británicos a lo largo de un único día en lo más crudo de la Primera Guerra Mundial.</p>
+                        </div>
+                        <div class="boton-entrar col-1">
+                            <a href="#"> <img src="img/right-arrow2.png" width="60" height="60"></a>
                         </div>
                     </div>
                 </div>
@@ -65,11 +68,14 @@
                         <div class="col-3">
                             <img src="img/soul.jpg" alt="Soul" width="160" height="200" class="mx-auto d-block"> 
                         </div>
-                        <div class="col-9">
+                        <div class="col-8">
                             <h3>Título: Soul</h3>
                             <p>Año lanzamiento: 2020</p>
                             <p>Director: Pete Docter</p>
                             <p>Los ritmos pegadizos, acentuados por palmas y movimientos corporales espontáneos, son un importante elemento del soul. Otras características son la llamada y respuesta entre el solista y el coro, y un sonido vocal particularmente tenso.</p>
+                        </div>
+                        <div class="boton-entrar col-1">
+                            <a href="#"> <img src="img/right-arrow2.png" width="60" height="60"></a>
                         </div>
                     </div>
                 </div>
@@ -80,11 +86,14 @@
                         <div class="col-3">
                             <img src="img/mank.jpg" alt="Mank" width="160" height="200" class="mx-auto d-block"> 
                         </div>
-                        <div class="col-9">
+                        <div class="col-8">
                             <h3>Título: Mank</h3>
                             <p>Año lanzamiento: 2020</p>
                             <p>Director: David Fincher</p>
                             <p>se adentra en el Hollywood de 1930 a través de los ojos de Herman Mankiewicz, uno de los más grandes libretistas de la época, a quien el alcohol le hizo perder su reputación.</p>
+                        </div>
+                        <div class="boton-entrar col-1">
+                            <a href="#"> <img src="img/right-arrow2.png" width="60" height="60"></a>
                         </div>
                     </div>
                 </div>
