--- a/mysite/myapp/templates/myapp/film.html
+++ b/mysite/myapp/templates/myapp/film.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" type="text/css" href="../../static/css/style.css">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static 'myapp/style.css' %}">
 </head>
 <body>
     <header class="header bg-light">
@@ -45,14 +45,14 @@
             <div class="card-body">
                 <div class="row container">
                     <div id ="pelicula-portada" class=" col-4">
-                        <img src="img/1917.jpg" > 
+                        <img src="{%static 'myapp/img/1917.jpg' %}"> 
                         <!--alt="1917" width="260" height="350"  class="mx-auto d-block"-->
                     </div>
                     <div id="pelicula-titulo" class=" col-8">
                         <div id="pelicula-titulo-valoracion" class="container">
                             <a>1917</a>
                             </br>
-                            <a1>4,5/5 <img src="img/estrella.png" width="40" height="40" /></a1>
+                            <a1>4,5/5 <img src="{%static 'myapp/img/estrella.png' %}" width="40" height="40" /></a1>
                         </div>
                     </div>
                 </div>
