--- a/mysite/myapp/templates/myapp/films.html
+++ b/mysite/myapp/templates/myapp/films.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" type="text/css" href="../../static/css/style.css">
+   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static 'myapp/style.css' %}">
 </head>
 <body>
     
@@ -41,7 +41,7 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-3 col-md-3 col-sm-3">
-                            <img class="imagen_pelicula" src="img/1917.jpg" alt="1917" width="160" height="200" class="mx-auto d-block"> 
+                            <img class="imagen_pelicula" src="{%static 'myapp/img/1917.jpg' %}" alt="1917" width="160" height="200" class="mx-auto d-block"> 
                         </div>
                         <div class="col-8 col-md-4 row-sm-3">
                             <h3>Título: 1917</h3>
@@ -50,7 +50,7 @@
                             <p>La película sigue a dos jóvenes soldados británicos a lo largo de un único día en lo más crudo de la Primera Guerra Mundial.</p>
                         </div>
                         <div class="boton-entrar col-1 col-md-2 col-sm-2">
-                            <a href="#"> <img src="img/right-arrow2.png"></a>
+                            <a href="#"> <img src="{%static 'myapp/img/right-arrow2.png' %}"></a>
                         </div>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-3 col-md-3 col-sm-3">
-                            <img class="imagen_pelicula" src="img/soul.jpg" alt="Soul" width="160" height="200" class="mx-auto d-block"> 
+                            <img class="imagen_pelicula" src="{%static 'myapp/img/soul.jpg' %}" alt="Soul" width="160" height="200" class="mx-auto d-block"> 
                         </div>
                         <div class="col-8 col-md-4 row-sm-3">
                             <h3>Título: Soul</h3>
@@ -68,7 +68,7 @@
                             <p>Los ritmos pegadizos, acentuados por palmas y movimientos corporales espontáneos, son un importante elemento del soul. Otras características son la llamada y respuesta entre el solista y el coro, y un sonido vocal particularmente tenso.</p>
                         </div>
                         <div class="boton-entrar col-1 col-md-2 col-sm-2">
-                            <a href="#"> <img src="img/right-arrow2.png"></a>
+                            <a href="#"> <img src="{%static 'myapp/img/right-arrow2.png' %}"></a>
                         </div>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-3 col-md-3 col-sm-3">
-                            <img class="imagen_pelicula" src="img/mank.jpg" alt="Mank" width="160" height="200" class="mx-auto d-block"> 
+                            <img class="imagen_pelicula" src="{%static 'myapp/img/mank.jpg' %}" alt="Mank" width="160" height="200" class="mx-auto d-block"> 
                         </div>
                         <div class="col-8 col-md-4 row-sm-3">
                             <h3>Título: Mank</h3>
@@ -86,7 +86,7 @@
                             <p>Se adentra en el Hollywood de 1930 a través de los ojos de Herman Mankiewicz, uno de los más grandes libretistas de la época, a quien el alcohol le hizo perder su reputación.</p>
                         </div>
                         <div class="boton-entrar col-1 col-md-2 col-sm-2">
-                            <a href="#"> <img src="img/right-arrow2.png" width="60" height="60"></a>
+                            <a href="#"> <img src="{%static 'myapp/img/right-arrow2.png' %}" width="60" height="60"></a>
                         </div>
                     </div>
                 </div>
