--- a/mysite/myapp/templates/myapp/new_film.html
+++ b/mysite/myapp/templates/myapp/new_film.html
@@ -46,38 +46,39 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Añadir pelicula</h5>
-                <form>
+                <form action = {% url 'add_film' %} method="post">
+                    {% csrf_token %}
                     <div class="form-group">
                       <label for="nombre_pelicula">Nombre</label>
-                      <input type="text" class="form-control" id="nombre_pelicula" name="nombre_pelicula" placeholder="Nombre de la pelicula">
+                      <input type="text" class="form-control" id="name_film" name="name_film" placeholder="Nombre de la pelicula">
                     </div>
                     <div class="form-group">
                         <label for="url_pelicula">URL de la pelicula</label>
-                        <input type="url" class="form-control" id="url_pelicula" name="url_pelicula" placeholder="URL de la pelicula">
+                        <input type="url" class="form-control" id="url_film" name="url_film" placeholder="URL de la pelicula">
                     </div>
                     <div class="form-group">
                         <label for="descripcion_pelicula">Descripcion</label>
-                        <input type="text" class="form-control" id="descripcion_pelicula" name="descripcion_pelicula" placeholder="Descripcion de la pelicula">
+                        <input type="text" class="form-control" id="description" name="description" placeholder="Descripcion de la pelicula">
                     </div>
                     <div class="form-group">
                         <label for="ano_pelicula">Año</label>
-                        <input type="number" class="form-control" id="ano_pelicula" name="ano_pelicula" placeholder="Año de la pelicula">
+                        <input type="number" class="form-control" id="year" name="year" placeholder="Año de la pelicula">
                     </div>
                     <div class="form-group">
                         <label for="director_pelicula">Director</label>
-                        <input type="text" class="form-control" id="director_pelicula" name="director_pelicula" placeholder="Director de la pelicula">
+                        <input type="text" class="form-control" id="director" name="director" placeholder="Director de la pelicula">
                     </div>
                     <div class="form-group">
                         <label for="reparto_pelicula">Reparto de actores</label>
-                        <input type="text" class="form-control" id="reparto_pelicula" name="reparto_pelicula" placeholder="Reparto de actores">
+                        <input type="text" class="form-control" id="actors" name="actors" placeholder="Reparto de actores">
                     </div>
                     <div class="form-group">
                         <label for="url_portada_pelicula">URL de la portada</label>
-                        <input type="url" class="form-control" id="url_portada_pelicula" name="url_portada_pelicula" placeholder="URL de la portada">
+                        <input type="url" class="form-control" id="url_cover" name="url_cover" placeholder="URL de la portada">
                     </div>
                     <div class="form-group">
                         <label for="valoracion_pelicula">Valoracion</label>
-                        <input type="number" class="form-control" id="valoracion_pelicula" name="valoracion_pelicula" placeholder="Valoracion de la pelicula" min="1" max="5">
+                        <input type="number" class="form-control" id="num_stars" name="num_stars" placeholder="Valoracion de la pelicula" min="1" max="5">
                     </div>
                     <div class="form-group">
                         <a href="">
