--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -18,19 +18,43 @@
     <link rel="stylesheet" type="text/css" href="{% static 'myapp/style.css' %}">
 </head>
 <body>
+    
+    <header class="header bg-light">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div id="nav" class="container">
+                    <a class="navbar-brand" href="#">Videoclub</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div id="navbar" class="navbar-collapse collapse justify-content-end">
+                        <ul class="navbar-nav mt-2 mt-md-0">
+                            <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Peliculas</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
+    {% if login_failed %}
+    LOGIN login_failed
+    {% endif %}
     <section id="formulario" class ="container">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Iniciar sesión</h4>
-                <form>
+                <form action = {% url 'get_login' %} method="post">
+                    {% csrf_token %}
                     <div class="col" id="inicio-login">
                         <div class="form-group">
-                            <output id="campos-formulario">Email:</output>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Introduce tu email" required="true">
+                            <label for="input">Nombre de usuario</label>
+                            <input type="text" class="form-control" id="username" name="username" placeholder="Introduce tu nombre de usuario" required="true">
                         </div>
                         <div class="form-group">
-                            <output id="campos-formulario">Contraseña:</output>
-                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="*********" required="true">
+                            <label for="input">Contraseña</label>
+                            <input type="password" class="form-control" id="password" name="password" placeholder="*********" required="true">
                         </div>
                         <div class="form-group">
                             <a href="">
