--- a/mysite/myapp/templates/myapp/films.html
+++ b/mysite/myapp/templates/myapp/films.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-   
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'myapp/style.css' %}">
 </head>
@@ -32,9 +32,37 @@
             </nav>
         </div>
     </header>
+
+    <section id="buscar_pelicula" class ="container">
+        <form>
+            <input type="search" id="input_nombre_pelicula" name="nombre_pelicula" placeholder="Nombre película">
+            <button type="submit" id="boton_buscador_film"><i class="fa fa-search"></i></button>
+        </form>
+    </section>
+
     <section id="peliculas_nuevas" class="mb-5">
         <div class="container">
-            <h2>Peliculas</h2>
+            <h2>Listado Completo de Películas</h2>
+        </div>
+        <div class="container">
+            <div class="cards" action = {% url 'films' %} method="get">
+                {% csrf_token %}
+                {% for film in films %}
+                <div id="caja" class="card">
+                    <div class="caja-cuerpo">
+                        <img class="imagen_pelicula" src="{{ film.url_cover }}" alt="1917" width="320" height="400" class="mx-auto d-block">
+                        <h3 id="titulo-film-lista"><strong>{{ film.name_film }}</strong> <small>({{ film.num_stars }}/5 &#x2605;)</small></h3>
+                        <button id="boton-film" class="btn btn-primary btn-block">Ver</button>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </section>
+
+    <!--section id="peliculas_nuevas" class="mb-5">
+        <div class="container">
+            <h2>Peliculas añadidas recientemente</h2>
         </div>
         <div class="container">
             <div class="cards">
@@ -82,7 +110,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
