--- a/mysite/myapp/static/myapp/style.css
+++ b/mysite/myapp/static/myapp/style.css
@@ -52,48 +52,11 @@ body, html {
 }
 #buscar_pelicula, #buscar_usuario{
     margin-top: 20px;
-    width: 100%;
+    width: 50%;
     color:white;
-    text-align: center;
 }
-
-/*#input_nombre_pelicula {
-    width: 25%;
-}*/
-
-#input_nombre_pelicula{
-    width:25%;
-    margin:10px;
-    padding:5px 8px;
-    border-radius:5px;
-    outline:none;
-    border:2px solid #ccd1d1;
-    background:#aeb6bf;
-    transition:all 0.5s;
-}
-#input_nombre_pelicula:focus{
-    background:#fff;
-    padding:10px 16px;
-    width:40%;
-}
-
-#boton_buscador_film{
-    text-decoration: none;
-    padding: 4px 10px;
-    font-weight: 600;
-    font-size: 20px;
-    color: #ffffff;
-    background-color: #1883ba;
-    border-radius: 5px;
-    border: 2px solid #ccd1d1;
-  }
-  #boton_buscador_film:hover{
-    color: #1883ba;
-    background-color: #ffffff;
-  }
 
 #peliculas_nuevas >  div > h2{
-    margin-top: 50px;
     color: white;
 }
 
@@ -109,10 +72,15 @@ body, html {
 }
 
 #pelicula-portada img{
+    /*background: blue;*/
+    /*display: block;
+    margin-left: auto;
+    margin-right: auto;*/
     border: solid 3px;
 }
 
 #pelicula-titulo {
+    /*background: yellowgreen;*/
     text-align: left;
     display: table;
     height: 100%;
@@ -135,6 +103,7 @@ body, html {
 }
 
 #pelicula-play{
+    /*background: red;*/
     padding: 1rem 1.5rem;
 }
 
@@ -146,6 +115,7 @@ body, html {
 }
 
 #pelicula-ficha {
+    /*background: green;*/
     padding:1rem 1rem;
 }
 
